# rinha-de-backend-2025

./: .dockerignore  .gitignore  .tool-versions  Cargo.toml  Dockerfile  Dockerfile.consumer  Dockerfile.local  Dockerfile.pingora  Makefile  README.md  TODO.md  benchmark.sh  docker-compose.local.yaml  docker-compose.yaml  lavinmq.conf  lavinmq.ini  nginx.conf  package.json  pingora-server.rs  shard.yml
.github/workflows/: ci-pingora.yaml  ci.yaml  test.yaml  update-submission.yaml
ebpf/: Makefile  go.mod  main.go
ebpf/c/: file_operations.c  fork_tracker.c  network_traffic.c  pid_filter.h  tcp_connect.c
load/: body.json  get.js  post.js
scripts/: bpf-script  bpf-track-all.sh  collapsed  out.perf  output.trace  perf-command  perf.data  track-all
src/: circuit_breaker_wrapper.cr  consumer.cr  http_client.cr  json_benchmark.cr  json_generator_bindings.cr  mongo_client.cr  payment_types.cr  postgres_client.cr  server.cr  simd_test.cr  skiplist_benchmark.cr  skiplist_bindings.cr  skiplist_spec.cr  sqlite_client.cr
src/amqp/: pubsub-client.cr
src/forks/circuit_breaker/: circuit_breaker.cr  circuit_state.cr  error_watcher.cr
src/lib/: ck_wrapper.c  json_generator.c  json_generator.h  lock-free-deque.cr  lock-free-deque.spec.cr  pubsub_client.cr  skiplist.c  skiplist.h
