[package]
name = "pingora-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pingora-server"
path = "pingora-server.rs"

[dependencies]
async-trait="0.1"
pingora = { version = "0.5", features = [ "lb" ] }
log="0.4.27"
env_logger="0.11.8"
pingora-load-balancing = "0.5.0"
http = "1.3.1"
trust-dns-resolver = "0.23.2"
